fix error Could not resolve fixing responsibility on mobile 8

--- a/src/components/art/Art.css
+++ b/src/components/art/Art.css
@@ -178,7 +178,7 @@
     opacity: 0;
   }
 
-  .nonOnMobile {
+  #art content ul .nonOnMobile {
     display: none;
   }
 }
